@@ -1,1 +1,23 @@
 # CSC-335-Final-Project
+Project Yahtzee
+This code creates a game of Yahtzee in java. It uses javaFX for the GUI. You can select any number of players
+ranging from 1-4. If you choose singleplayer, then you will automatically given a CPU opponent. You can choose to play
+against an easy CPU or a hard CPU by clicking on the corresponding button if singleplayer was chosen.
+If you choose multiplayer, then you can choose to play the game with 2-4 players. Click on the corresponding
+button to choose the number of players for the game.
+
+Steps to run the code:
+1. Download the zip file
+2. extract the zip file
+3. place the file into an IDE that supports java eclipse and javaFX
+4. place this line into your run configurations for the GameView --module-path "(your path to javafx.lib)" --add-modules javafx.controls,javafx.media
+5. Run the GameView class
+
+Steps to play the game:
+1. Choose singleplayer or multiplayer
+2. If multiplayer was chosen, choose the number of players
+3. If singleplayer was chosen, choose easy or hard mode for the CPU
+4. Click on the dice that you do not want to reroll
+5. Click roll dice to roll all the dice that were not chosen
+6. You can click on the dice that were chosen to not be rolled so that they can be rolled again
+7. Click on the category that you want the score to go to on the left-hand side
